grammar and shit

--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -9,7 +9,7 @@
 \end{mybox}
 
 \subsection{Complex Quantum Systems}
-A complex quantum system is a system of particles where each particle has multiple degrees of freedom, in turn, one degree of freedom can have quantum numbers other than the basic $\ket{1}$ and $\ket{0}$. That is, to make quantum teleportation a practical technique for quantum communication it needs to be possible to teleport these high dimensional states, since we want to be able to teleport a complete quantum state for a given particle. For example, a photon can be encoded in polarization, orbital angular momentum, and more. This also increases the information density of the particles used to transmit information. \cite{Hu:2023}
+A complex quantum system is a system of particles where each particle has multiple degrees of freedom, in turn, one degree of freedom can have quantum numbers other than the basic $\ket{1}$ and $\ket{0}$. That is, to make quantum teleportation a practical technique for quantum communication it needs to be possible to teleport these high dimensional states, since we want to be able to teleport a complete quantum state for a given particle. For example, two of the ways a photon may be encoded in is polarization and orbital angular momentum. This also increases the information density of the particles used to transmit information. \cite{Hu:2023}
 
 In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits. Qudits are encoded in $d$ dimensions, and systems with $d\geq 3$ are referred to as multilevel systems, that is, qudits are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been theoretically proven that auxiliary particles are needed to perform Bell measurements when using linear optics. \cite{Hu:2023}
 
@@ -23,4 +23,4 @@ which is a 3-dimensional Bell state. The nine total 3-dimensional Bell states to
 \subsection{Experimental Realization}
 One experimentally proven Bell measurement scheme uses quantum Fourier transformations. The experiment teleported a 3-dimensional system using one auxiliary particle. However, it has been shown that for dimension $d$, $d-2$ auxiliary particles are needed. The fidelity of this experiment was $\SI{75\pm 1}{\percent}$. The system was encoded using path the path of the photon. That is, by using a series of mirrors and beam splitters, it is possible to generate superposition states. \cite{Luo:2019}
 
-More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics concerning discrimination of Bell states for dimensions $d \geq 3$. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports. This gives 9 different output positions for detectors, since one photon has 3-dimensional encoding, and depending on the state will end up in different places. Then, depending on the detector activation pattern, the state will be projected onto one of the possible Bell states. \cite{Luo:2019}
+More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done to overcome the limits of linear optics concerning discrimination of Bell states for dimensions $d \geq 3$. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports. This gives 9 different output positions for detectors, since one photon has 3-dimensional encoding, and depending on the state will end up in different places. Then, depending on the detector activation pattern, the state will be projected onto one of the possible Bell states. \cite{Luo:2019}
