--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -1,6 +1,6 @@
 \section{Experimental Evidence}
 Quantum teleportation has been implemented in many experiments, 
-each with different protocols to address challenges in fidelity, distance, and scalability. 
+each with different protocols to address challenges in fidelity, distance and scalability. 
 Experimental realization is necessary for validating theoretical models and advancing quantum communication technologies. 
 This section examines two key implementations, satellite-based and fiber network-based teleportation, that demonstrate 
 solutions to distance-dependent losses and environmental decoherence, contributing to the development of robust quantum networks.
@@ -38,20 +38,16 @@ The entangled pair of photons is described by one of the Bell states:
 \end{equation}
 where photon 2 was retained at the ground station, and photon 3 was sent to the satellite \cite{Ren:2017}.
 
-A joint measurement, known as a Bell-state measurement, was performed on the photon to be teleported (photon 1) and photon 2 from the entangled pair. 
-This measurement projected the two photons into one of the Bell states:
+A Bell-state measurement was performed on the photon to be teleported (photon 1) and the ground station photon (photon 2) from the entangled pair. This measurement projected the two photons into one of the Bell states:
 \begin{equation}
     \ket{\psi^{\pm}}_{12} = \frac{1}{\sqrt{2}} (\ket{H}_1\ket{H}_2 \pm \ket{V}_1\ket{V}_2).
 \end{equation}
 
-The outcome of the measurement was then transmitted classically to the satellite, where it influenced the state of photon 3. If the measured state was \(\ket{\psi^{+}}_{12}\), photon 3 adopted the original state of photon 1. If the measured state was \(\ket{\psi^{-}}_{12}\), photon 3 carried the original state of photon 1, but with a \(\pi\)-phase shift.  
+The outcome of the measurement was then transmitted classically to the satellite, where the relevant rotations can be performed on photon 3 to obtain $\ket{\chi}_1$. If the measured state was \(\ket{\psi^{+}}_{12}\), photon 3 adopted the original state of photon 1. If the measured state was \(\ket{\psi^{-}}_{12}\), photon 3 carried the original state of photon 1, but with a \(\pi\)-phase shift.  
 
-This experiment demonstrated the successful teleportation of a photon's quantum state over distances of up to 1400 kilometers, from a ground station to a satellite in low-Earth orbit. 
-The primary technical challenges included atmospheric turbulence, which caused beam wandering and broadening, resulting in significant signal losses. 
-These challenges were addressed through the use of a narrow beam divergence, a high-precision telescope, and an advanced acquiring, pointing, and tracking (APT) system \cite{Ren:2017}.
+This experiment demonstrated the successful teleportation of a photon's quantum state over distances of up to 1400 kilometers with a fidelity of \SI{80(1)}{\percent}, from a ground station to a satellite in low-Earth orbit. The primary technical challenges included atmospheric turbulence, which caused beam wandering and broadening, resulting in significant signal losses. These challenges were addressed through the use of a narrow beam divergence, a high-precision telescope, and an advanced acquiring, pointing, and tracking (APT) system \cite{Ren:2017}.
 
-In the future, this method could be used to create a global quantum internet, connecting quantum computers across the globe and introducing secure cryptography protocols. 
-This also raises the possibility of letting several quantum processors work together on a single problem, enhancing the efficacy of quantum computers.
+In the future, this method could be used to create a global quantum internet, connecting quantum computers across the globe and introducing secure cryptography protocols. This also raises the possibility of letting several quantum processors work together on a single problem, enhancing the efficacy of quantum computers.
 
 \subsection{Fibre Network Based}
 %100 km \cite{Takesue:2015}. Metropolitan \cite{Valivarthi:2016}
@@ -65,24 +61,11 @@ This also raises the possibility of letting several quantum processors work toge
 %\end{mybox} 
 
 
-When it comes to fiber-based quantum teleportation, experiments have achieved notable advancements in efficiency and distance. Using time-bin encoded qubits, 
-which are resilient to fiber transmission noise, researchers demonstrated teleportation over 100 kilometers of optical fiber. 
-This was made possible through the use of high-detection-efficiency superconducting nanowire single-photon detectors (SNSPDs). 
-These detectors made precise multi-photon coincidence measurements possible. These are crucial for the reliably performing Bell-state projections. 
-The experiment achieved an average teleportation fidelity of 83.7\%, surpassing the classical limit \cite{Takesue:2015}.
+When it comes to fiber-based quantum teleportation, experiments have achieved notable advancements in efficiency and distance. Using time-bin encoded qubits, which are resilient to fiber transmission noise, researchers demonstrated teleportation over 100 kilometers of optical fiber. This was made possible through the use of high-detection-efficiency superconducting nanowire single-photon detectors (SNSPDs). These detectors made precise multi-photon coincidence measurements possible. These are crucial for the reliably performing Bell-state projections. The experiment achieved an average teleportation fidelity of \SI{83.7(2.0)}{\percent}, surpassing the classical limit \cite{Takesue:2015}.
 
-Teleportation across a metropolitan fiber network showed the potential of quantum communications in urban settings. 
-This experiment utilized time-bin entangled photons at telecommunication wavelengths, transmitted through the Calgary fiber network over a combined distance of 8.2 kilometers. 
-The protocol required rigorous stabilization of timing and polarization to ensure indistinguishability between photons arriving at the Bell-state measurement station. 
-The results demonstrated that teleportation in real-world fiber networks is possible and it achieved an average fidelity of 80\% for single-photon states \cite{Valivarthi:2016}.
+Teleportation across a metropolitan fiber network showed the potential of quantum communications in urban settings. This experiment utilized time-bin entangled photons at telecommunication wavelengths, transmitted through the Calgary fiber network over a combined distance of 8.2 kilometers. The protocol required rigorous stabilization of timing and polarization to ensure indistinguishability between photons arriving at the Bell-state measurement station. The results demonstrated that teleportation in real-world fiber networks is possible and it achieved an average fidelity of \SI{80(2)}{\percent} for single-photon states \cite{Valivarthi:2016}.
 
-Across these experiments, significant technical challenges were addressed to achieve successful teleportation over large distances. 
-Fiber-based teleportation experiments had to overcome loss and noise over long distances, forcing development of efficient photon detectors like SNSPDs. 
-In metropolitan networks, maintaining the indistinguishability of photons despite environmental fluctuations required active stabilization of polarization and timing using feedback systems.
+Across these experiments, significant technical challenges were addressed to achieve successful teleportation over large distances. Fiber-based teleportation experiments had to overcome loss and noise over long distances, encouraging development of efficient photon detectors like SNSPDs. In metropolitan networks, maintaining the indistinguishability of photons despite environmental fluctuations required active stabilization of polarization and timing using feedback systems.\cite{Valivarthi:2016}
 
-These advancements mark critical milestones toward the development of a global quantum internet. 
-The ability to teleport quantum states over unprecedented distances enables secure quantum key distribution (QKD), enabling unbreakable encryption protocols. 
-Moreover, the integration of teleportation with quantum repeater technologies promises scalable quantum networks capable of connecting quantum computers across continents. 
-These networks hold the potential to revolutionize secure communication, distributed quantum computing, and fundamental tests of quantum mechanics, 
-laying the groundwork for a new era in quantum information.
+These advancements mark critical milestones toward the development of a global quantum internet. The ability to teleport quantum states over unprecedented distances enables secure quantum key distribution (QKD), enabling unbreakable encryption protocols. Moreover, the integration of teleportation with quantum repeater technologies promises scalable quantum networks capable of connecting quantum computers across continents. These networks hold the potential to revolutionize secure communication, distributed quantum computing, and fundamental tests of quantum mechanics, laying the groundwork for a new era in quantum information.\cite{Valivarthi:2016}
 
