maybe QR&QM intro

--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -9,6 +9,7 @@
 %        \item how good are today's quantum repeaters? 
 %    \end{itemize}
 %\end{mybox}
+In realizing long distance teleportation for a quantum internet or any form of quantum communication, it is necessary to create a quantum repeater. Such a unit will also give rise to the need of quantum memory. These concepts will be discussed further in this section.
 
 \subsection{Entanglement swapping}
 
