--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -67,5 +67,5 @@ Teleportation across a metropolitan fiber network showed the potential of quantu
 
 Across these experiments, significant technical challenges were addressed to achieve successful teleportation over large distances. Fiber-based teleportation experiments had to overcome loss and noise over long distances, encouraging development of efficient photon detectors like SNSPDs. In metropolitan networks, maintaining the indistinguishability of photons despite environmental fluctuations required active stabilization of polarization and timing using feedback systems.\cite{Valivarthi:2016}
 
-These advancements mark critical milestones toward the development of a global quantum internet. The ability to teleport quantum states over unprecedented distances enables secure quantum key distribution (QKD), enabling unbreakable encryption protocols. Moreover, the integration of teleportation with quantum repeater technologies promises scalable quantum networks capable of connecting quantum computers across continents. These networks hold the potential to revolutionize secure communication, distributed quantum computing, and fundamental tests of quantum mechanics, laying the groundwork for a new era in quantum information.\cite{Valivarthi:2016}
+These advancements mark critical milestones toward the development of a global quantum internet. The ability to teleport quantum states over unprecedented distances enables practical applications of QKD. Moreover, the integration of teleportation with quantum repeater technologies promises scalable quantum networks capable of connecting quantum computers across continents. These networks hold the potential to revolutionize secure communication, distributed quantum computing, and fundamental tests of quantum mechanics, laying the groundwork for a new era in quantum information.\cite{Valivarthi:2016}
 
