--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -10,15 +10,16 @@
     \end{itemize}
 \end{mybox}
 \end{comment}
-\subsection{Preliminaries}
-In quantum teleportation the sender and receiver are referred to as Alice and Bob, and are denoted $A$ and $B$ respectively. Sometimes a third party is relevant which will be called Charlie and be denoted $C$. \cite{Nielsen:2010}
+Quantum teleportation is an integral part of quantum communication. This report will discuss complex quantum systems, technologies and theory needed for long range quantum teleportation, as well as some experimental realizations. In quantum teleportation the sender and receiver are referred to as Alice and Bob, and are denoted $A$ and $B$ respectively. Sometimes a third party is relevant which will be called Charlie and be denoted $C$. \cite{Nielsen:2010}
 
-\subsubsection{EPR-pairs and the Bell Basis}
+\subsection{EPR-pairs and the Bell Basis}
 An Einstein-Podolsky-Rosen-pair (EPR-pair) is a maximally entangled state of two qubits \cite{Nielsen:2010} which can be written as
 \begin{equation}
     \ket{\Phi^\pm} = \frac{\ket{00} \pm \ket{11}}{\sqrt{2}} \quad \text{and} \ket{\Psi^\pm} = \frac{\ket{01} \pm \ket{10}}{\sqrt{2}}.\label{eq:epr}
 \end{equation}
 When measuring a quantum state, the basis of measurement is important as this determines the possible outcome states. Common basis used are the computational basis, consisting of $\ket{0}$ and $\ket{1}$, and the Bell basis consisting of the EPR-pairs, also known as Bell states, seen in Eq. \eqref{eq:epr}. EPR-pairs and projective measurements in the Bell basis, henceforth called Bell measurements, play a crucial role in quantum teleportation protocols. \cite{Nielsen:2010}
+
+The Bell basis does not only exist in 2-dimensional systems but can be extended to any $d$-dimensional Hilbert space requiring $d^2$ Bell states to form a complete set. This is useful when considering quantum teleportation protocols for complex systems. \cite{Luo:2019}
 
 
 \subsection{Quantum Teleportation Protocol}
@@ -55,7 +56,7 @@ That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice s
 \subsection{Reasons and Applications}
 Quantum communications and quantum computing are two large fields being researched at the moment, and it is important to ask the question of why this effort is worth it. For one thing, in the age of information, sending and receiving data is increasingly more important as we rely more and more on technology \cite{Azuma:2023}. A corollary of this is then that secure communication is of the utmost importance to keep our personal information secure. \cite{Hu:2023}
 
-Quantum communication opens up possibilities of transmitting data unable to be compromised using entangled states \cite{Hu:2023}. Furthermore, quantum computing could, if developed sufficiently, apply Shor's algorithm to break the current encryption used by modern digital technology \cite{Nielsen:2010}. It could therefore prove useful, or even paramount, to have a quantum internet complementing the current digital one \cite{Azuma:2023}.
+Quantum communication opens up possibilities of transmitting data using quantum key distribution (QKD), a protocol utilizing entanglement, which is unable to be compromised \cite{Hu:2023}. Furthermore, quantum computing could, if developed sufficiently, apply Shor's algorithm to break the current encryption used by modern digital technology \cite{Nielsen:2010}. It could therefore prove useful, or even paramount, to have a quantum internet complementing the current digital one \cite{Azuma:2023}.
 
 To realize a full scale quantum internet, or even larger quantum networks, technologies decreasing attenuation of the signal and storing information is essential \cite{Azuma:2023}. That is, a successful quantum communication protocol will need to apply both quantum memory technologies and quantum repeater technologies. It is therefore not sufficient to just focus on quantum computers for calculation but also infrastructure and technologies to link multiple quantum computers together. Specifically one application could be secure cloud based computing \cite{Azuma:2023} which could increase the accessibility to run quantum computation algorithms. Such algorithm's could solve some computational tasks exponentially faster, thus decreasing energy needed, and effects on the climate. Quantum simulation algorithms can also help in the quest of understanding molecular reaction, helping to create more efficient catalysts \cite{Outeiral:2021}.
 
