--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -17,7 +17,7 @@ Assuming that Alice and Bob are too far apart from each other to efficiently tra
 
 \subsection{Quantum memory}
 
-For the entanglement swapping to be efficiently used in a repeater protocol, Charlie needs to store the quantum state sent by Alice, while waiting for Bob's state. This requires a way of storing the state without destroying the information it carries. Classically this is not a problem, since information can be duplicated exactly. In quantum information this is not possible due to the no-cloning theorem. A quantum state can not be completely duplicated, meaning that the qubit carrying the state must be stored itself. Such a memory has been realized in many different ways, including storing the state in trapped ions, with a memory time of 4 ms \cite{trapped_ion_memory} and in quantum dots with a memory time of 3 $\mu$s \cite{dot_memory}.
+For the entanglement swapping to be efficiently used in a repeater protocol, Charlie needs to store the quantum state sent by Alice, while waiting for Bob's state. This requires a way of storing the state without destroying the information it carries. Classically this is not a problem, since information can be duplicated exactly. In quantum information this is not possible due to the no-cloning theorem. A quantum state can not be completely duplicated, meaning that the qubit carrying the state must be stored itself. Such a memory has been realized in many different ways, including storing the state in trapped ions, with a memory time of 4 ms \cite{trapped_ion_memory}, in quantum dots with a memory time of 3 $\mu$s \cite{dot_memory} and as optical storage in an atomic frequency comb with a memory time of up to 1 hour \cite{1hour}.
 
 
 \subsection{Quantum repeater protocol}
