--- a/references.bib
+++ b/references.bib
@@ -229,3 +229,18 @@
 	year = {2007},
 	bdsk-url-1 = {https://www.science.org/doi/abs/10.1126/science.1146850},
 	bdsk-url-2 = {https://doi.org/10.1126/science.1146850}}
+
+@article{1hour,
+  author = {Ma, Yu and Ma, You-Zhi and Zhou, Zong-Quan and Li, Chuan-Feng and Guo, Guang-Can},
+  title = {One-hour coherent optical storage in an atomic frequency comb memory},
+  journal = {Nature Communications},
+  volume = {12},
+  number = {1},
+  pages = {2381},
+  year = {2021},
+  month = {April},
+  doi = {10.1038/s41467-021-22706-y},
+  url = {https://doi.org/10.1038/s41467-021-22706-y},
+  abstract = {Photon loss in optical fibers prevents long-distance distribution of quantum information on the ground. Quantum repeater is proposed to overcome this problem, but the communication distance is still limited so far because of the system complexity of the quantum repeater scheme. Alternative solutions include transportable quantum memory and quantum-memory-equipped satellites, where long-lived optical quantum memories are the key components to realize global quantum communication. However, the longest storage time of the optical memories demonstrated so far is approximately 1 minute. Here, by employing a zero-first-order-Zeeman magnetic field and dynamical decoupling to protect the spin coherence in a solid, we demonstrate coherent storage of light in an atomic frequency comb memory over 1 hour, leading to a promising future for large-scale quantum communication based on long-lived solid-state quantum memories.},
+  issn = {2041-1723}
+}
