--- a/paper/summary.tex
+++ b/paper/summary.tex
@@ -1,1 +1,8 @@
 \section{Summary \& Conclusion}
+Quantum teleportation stands as a cornerstone of quantum communication, providing a method to transfer quantum states across distant locations without the physical movement of particles. This report examined the theoretical underpinnings, technological advances, and experimental implementations of quantum teleportation. It began by detailing the foundational concepts, including Einstein-Podolsky-Rosen (EPR) pairs, Bell states, and the quantum teleportation protocol. Using entanglement and classical communication channels, teleportation allows the exact state of a quantum particle to be replicated remotely, ensuring the fidelity and security of the process.
+
+The report explored teleportation of complex quantum systems, focusing on the use of qudits in high-dimensional states to enhance information density and practical applications. Challenges such as creating high-quality entanglement and performing accurate Bell measurements were addressed, with experimental realizations showcasing promising advancements like the use of auxiliary particles and quantum Fourier transformations.
+
+To enable long-distance quantum teleportation, technologies such as quantum repeaters and quantum memory were highlighted. These components mitigate signal loss and enhance scalability by enabling entanglement swapping and reliable storage of quantum states. Experimental achievements were discussed, showcasing satellite-based and fiber-network-based teleportation. Satellite-based teleportation demonstrated quantum state transfer over \SI{1400}{\kilo\meter} with high fidelity, overcoming atmospheric and tracking challenges. Fiber-based teleportation achieved urban network integration and long-distance communication through advancements in time-bin encoding and efficient photon detectors.
+
+These developments underscore the transformative potential of quantum teleportation in enabling a global quantum internet. Such a network would revolutionize secure communication, distributed quantum computing, and other applications requiring robust quantum state transfer. Experimental validations provide a roadmap for overcoming current limitations and advancing towards practical implementations. The report concludes that the integration of theoretical innovation, technological refinement, and scalable infrastructure is critical for the realization of the quantum internet and its associated benefits for science and technology.
