--- a/paper/summary.tex
+++ b/paper/summary.tex
@@ -5,4 +5,5 @@ The report explored teleportation of complex quantum systems, focusing on the us
 
 To enable long-distance quantum teleportation, technologies such as quantum repeaters and quantum memory were highlighted. These components mitigate signal loss and enhance scalability by enabling entanglement swapping and reliable storage of quantum states. Experimental achievements were discussed, showcasing satellite-based and fiber-network-based teleportation. Satellite-based teleportation demonstrated quantum state transfer over \SI{1400}{\kilo\meter} with high fidelity, overcoming atmospheric and tracking challenges. Fiber-based teleportation achieved urban network integration and long-distance communication through advancements in time-bin encoding and efficient photon detectors.
 
-These developments underscore the transformative potential of quantum teleportation in enabling a global quantum internet. Such a network would revolutionize secure communication, distributed quantum computing, and other applications requiring robust quantum state transfer. Experimental validations provide a roadmap for overcoming current limitations and advancing towards practical implementations. The report concludes that the integration of theoretical innovation, technological refinement, and scalable infrastructure is critical for the realization of the quantum internet and its associated benefits for science and technology.
+In conclusion, quantum teleportation represents a pivotal step toward realizing a global quantum internet, capable of secure communication and distributed quantum computing. Current experimental successes provide a strong foundation, but continued advancements in scalability, error mitigation, and infrastructure integration are essential. These efforts promise to revolutionize communication, computation, and fundamental quantum research, propelling the field into an era of unprecedented possibilities.
+
