DOne with shenanigans

--- a/format/preamble.tex
+++ b/format/preamble.tex
@@ -95,4 +95,9 @@
     colback=lightblue,
     colframe=darkblue,
     fonttitle=\bfseries,
-    title=#1}
+    title=#1
+}
+
+\usepackage{titlesec}
+\titlespacing*{\section}{0pt}{11pt plus 4pt minus 4pt}{4pt plus 2pt minus 2pt}
+\titlespacing*{\subsection}{0pt}{11pt plus 4pt minus 4pt}{4pt plus 2pt minus 2pt}
