--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,21 @@
 \input{format/header}
 
 \tableofcontents
+\clearpage
+\vspace*{2cm}
+\begin{figure}[H]
+    \centering
+    \includegraphics{figures/uss_enterprise.jpg}
+    \vspace*{-8mm}
+    \flushleft
+    USS Enterprise \cite{uss}
+\end{figure}
+\vspace*{\fill}
+\begin{center}
+    \Large
+    \textit{``I think I can safely say that nobody understands quantum mechanics.''} --- Richard P. Feynman
+\end{center}
+\vfill
 
 \clearpage
 \setcounter{page}{1}
