--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -23,7 +23,7 @@ The Bell basis does not only exist in 2-dimensional systems but can be extended 
 
 
 \subsection{Quantum Teleportation Protocol}
-Let Alice have a particle with a normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi$ which is unknown to her, that she wants to send to Bob. Sending the particle itself is rarely possible since Alice does not necessarily know where Bob is located. She also cannot measure the particle to get accurate information since the particle is part of an unknown orthonormal set. To overcome these hurdles, Alice can instead opt to send, or teleport, the state $\ket{\phi}$ to Bob. \cite{Bennett:1993}
+Let Alice have a particle with a normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi$ which is unknown to her, that she wants to send to Bob. Sending the particle itself is rarely possible since Alice does not necessarily know where Bob is located. She also cannot measure the particle to get accurate information since the particle is part of an unknown orthonormal set. To overcome these hurdles, Alice can instead opt to teleport the state $\ket{\phi}$ to Bob. \cite{Bennett:1993}
 
 To realize this teleportation both a classical channel and a non-classical channel will be used. The non-classical channel is made of an EPR-pair, where one particle is with Alice and one with Bob. Let Alice and Bob share the EPR-pair 
 \begin{equation}
@@ -54,7 +54,7 @@ Depending on the result of Alice's measurement Bob will have the following state
 That is Bob will end up with a rotated version of $\ket{\phi}$. Thus, if Alice sends the result of her measurement classically to Bob he can perform the necessary rotation to obtain the state $\ket{\phi}$. The classical channel can be a generic broadcast, i.e. a radio, which essentially means that Alice doesn't need to know Bob's location. Note that the choice of $\ket{\Psi^-}$ as the shared EPR-pair was arbitrary. However, which state is shared must be known by both parties since that will change what gate Bob has to apply to obtain $\ket{\phi}$. \cite{Bennett:1993}
 
 \subsection{Reasons and Applications}
-Quantum communications and quantum computing are two large fields being researched at the moment, and it is important to ask the question of why this effort is worth it. For one thing, in the age of information, sending and receiving data is increasingly more important as we rely more and more on technology \cite{Azuma:2023}. A corollary of this is then that secure communication is of the utmost importance to keep our personal information secure. \cite{Hu:2023}
+With quantum communications and quantum computing being key areas of study, it is critical to reflect on the value of these ongoing efforts. For one thing, in the age of information, sending and receiving data is increasingly more important as we rely more and more on technology \cite{Azuma:2023}. A corollary of this is then that secure communication is of the utmost importance to keep our personal information secure. \cite{Hu:2023}
 
 Quantum communication opens up possibilities of transmitting data using quantum key distribution (QKD), a protocol utilizing entanglement, which is unable to be compromised \cite{Hu:2023}. Furthermore, quantum computing could, if developed sufficiently, apply Shor's algorithm to break the current encryption used by modern digital technology \cite{Nielsen:2010}. It could therefore prove useful, or even paramount, to have a quantum internet complementing the current digital one \cite{Azuma:2023}.
 
